syntax = "proto3";

option java_package = "com.github.jntakpe.users";

package users;

import "validate/validate.proto";
import "google/api/annotations.proto";

service UsersService {
  rpc FindById(ByIdRequest) returns (UserResponse) {
    option (google.api.http) = {get: "/v1/users/{id}"};
  }
  rpc FindByUsername(UsersByUsernameRequest) returns (UserResponse) {
    option (google.api.http) = {get: "/v1/users"};
  }
  rpc Create(UserRequest) returns (UserResponse) {
    option (google.api.http) = {post: "/v1/users"};
  }
}

message ByIdRequest {
  string id = 1;
}

message UsersByUsernameRequest {
  string username = 1 [(validate.rules).string.len = 24];
}

message UserRequest {
  string username = 1 [(validate.rules).any.required = true, (validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).any.required = true, (validate.rules).string.email = true];
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  string country_code = 6 [(validate.rules).string.len = 2];
}

message UserResponse {
  string username = 1 [(validate.rules).any.required = true, (validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).any.required = true, (validate.rules).string.email = true];
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  string country_code = 6 [(validate.rules).string = {min_len: 2, max_len: 3}];
  string id = 15 [(validate.rules).string.len = 24];
}
